# rust-swift-screencapture

./: .gitignore  Cargo.toml  README.md  build.rs
src/: display.rs  lib.rs  main.rs
swift-library/: Package.swift
swift-library/Sources/swift-library/: swift_library.swift
