[package]
name = "rust-binary-calls-swift-package"
version = "0.1.0"
edition = "2021"
publish = []

build = "build.rs"

[build-dependencies]
swift-bridge-build = "0.1.51"

[dependencies]
env_logger = "0.10.0"
log = "0.4.18"
once_cell = "1.17.2"
swift-bridge = "0.1.51"
tokio = { version = "1.28.2", features = ["sync", "rt", "parking_lot", "macros", "rt-multi-thread"] }

