[package]
name = "rust_swift_screencapture"
version = "0.1.1"
edition = "2021"
publish = []

build = "build.rs"

[build-dependencies]
swift-bridge-build = "0.1.51"

[dependencies]
derivative = "2.2.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.18"
once_cell = "1.17.2"
swift-bridge = "0.1.51"
tokio = { version = "1.28.2", features = ["sync", "rt", "parking_lot", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }

